frontend_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: frontend-deployment
 labels:
   app: frontend
spec:
 replicas: 1
 selector:
   matchLabels:
     app: frontend
 template:
   metadata:
     labels:
       app: frontend
   spec:
     containers:
     - name: frontend
       image: 9440866803/frontend_0001
       ports:
       - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30006
